<resources>
    <string name="app_name">Native Recording</string>
    <string name="action_settings">Settings</string>
    <string name="start_engine">Start Engine</string>
    <string name="stop_engine">Stop Engine</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="export_signals">Write signals signal to file</string>
    <string name="need_record_audio_permission">"This sample needs RECORD_AUDIO permission"</string>
    <string name="status_playing">Engine Playing ....</string>
    <string name="status_open_failed">Engine Failed to Open Streams!</string>
    <string name="status_record_audio_denied">Error: Permission for RECORD_AUDIO was denied</string>
    <string name="status_touch_to_begin">RECORD_AUDIO permission granted, touch START to begin</string>
    <string name="status_warning">Warning: If you run this sample using the built-in microphone
        and speaker you may create a feedback loop which will not be pleasant to listen to.</string>
    <string name="recording_device">Recording device</string>
    <string name="playback_device">Playback device</string>

    <string name="apiSelection">APIs</string>
    <string name="aaudio">AAudio</string>
    <string name="sles">OpenSL ES</string>
</resources>
